crates/pina_macros/tests/ui/fail/discriminator_missing_value.rs
use pina::*;

#[discriminator]
pub enum MissingValueDiscriminator {
	Value,
}

fn main() {}
