crates/pina_macros/tests/ui/fail/discriminator_missing_value.stderr
error: Enum variant for discriminator must have an explicit value.
 --> tests/ui/fail/discriminator_missing_value.rs:5:2
  |
5 |     Value,
  |     ^^^^^
